--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,8 @@ body {
 			<p></p>
 			<!-- <button class="button btn-cart"><span><span>Add to My Bag</span></span></button> -->
 
-			<a href="#" class="animated-button1">
+			<a href="https://www.w3schools.com" target="_blank" 
+			class="animated-button1">
 				<span></span>
 				<span></span>
 				<span></span>
