--- a/index.html
+++ b/index.html
@@ -122,10 +122,13 @@
                             $("#orderPerformer").show();
                         }
                     },
-                    error: function () {
-                        $("#output-failure").show();
-                        $("#priceGet").hide();
-                    }
+                    error:
+                        function (xhr, status, error) {
+                            var err = eval("(" + xhr.responseText + ")");
+                            alert(err.Message);
+                            $("#output-failure").show();
+                            $("#priceGet").hide();
+                        }
                 });
 
             })
