--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    alert('test');
+    const frame = document.getElementById('your-frame-id');
+    frame.contentWindow.postMessage('param1', 'http://your-second-site.com');
+  </script>
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
