--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 <h1>My Website</h1>
 <p>A website created by me.</p>
 <div>
-    <iframe src="https://rent.rentup.pl/banner-prod.html" width="370px" height="370px" frameborder="0"></iframe>
+    <iframe src="http://localhost:9000/banner-local.html" width="370px" height="370px" frameborder="0"></iframe>
 </div>
 </body>
 </html>
