--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
     alert('test');
-    const frame = document.getElementById('your-frame-id');
+    const frame = document.getElementById('rentup-frame');
     frame.contentWindow.postMessage('param1', 'http://your-second-site.com');
   </script>
 <style>
@@ -20,7 +20,7 @@ body {
 <h1>My Website</h1>
 <p>A website created by me.</p>
 <div>
-    <iframe src="http://localhost:9000/banner-local.html" width="370px" height="370px" frameborder="0"></iframe>
+    <iframe src="http://localhost:9000/banner-local.html" width="370px" height="370px" frameborder="0" id='rentup-frame'></iframe>
 </div>
 </body>
 </html>
