--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
             document.addEventListener("DOMContentLoaded", function(){
-            var iframe = document.createElement('iframe');
-            var fullUrl = window.location.href;
+            const iframe = document.createElement('iframe');
+            const fullUrl = window.location.href;
             iframe.src = 'http://localhost:9000/banner-local.html';
             iframe.width = '370px'
             iframe.height = '370px'
-            iframe.frameBorder = "0"
-            iframe.id = fullUrl;
+            iframe.frameBorder = '0'
             iframe.name = fullUrl;
             document.body.appendChild(iframe);
-            console.log('iframe.contentWindow =', iframe.contentWindow);
-            alert(fullUrl);
         });
-    
   </script>
 <style>
 body {
