--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             const iframe = document.createElement('iframe');
             const fullUrl = window.location.href;
             iframe.src = 'http://localhost:9000/banner-local.html';
-            iframe.width = '370px'
-            iframe.height = '370px'
-            iframe.frameBorder = '0'
+            iframe.width = '370px';
+            iframe.height = '370px';
+            iframe.frameBorder = '0';
             iframe.name = fullUrl;
             document.body.appendChild(iframe);
         });
